--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ DB_NAME=defaultdb
 DB_USER=avnadmin
 DB_PASSWORD=AVNS_IMCbwml3zGByOJWl11U
 DB_HOST=travelapp-travelappubt.h.aivencloud.com
-PORT=11470
+DB_PORT=11470
+PORT=5000
+DB_SSL=true
 SESSION_SECRET=your-secret-key
 JWT_SECRET=your-jwt-secret
 NODE_ENV=development
